@@ -2,7 +2,7 @@ dn: o=University of Michigan,c=US
 objectClass: organization
 objectClass: extensibleObject
 o: University of Michigan
-o;lang-x;lang-xx;lang-yy;lang-z;lang-y;lang-zz: University of Michigan
+o;lang-x;lang-xx;lang-y;lang-yy;lang-z;lang-zz: University of Michigan
 name;lang-en-us: Billy Ray
 name;lang-en-us: Billy Bob
 cn;lang-en-us: Billy Ray
@@ -12,7 +12,7 @@ sn: Ray
 
 dn: o=University of Michigan,c=US
 o: University of Michigan
-o;lang-x;lang-xx;lang-yy;lang-z;lang-y;lang-zz: University of Michigan
+o;lang-x;lang-xx;lang-y;lang-yy;lang-z;lang-zz: University of Michigan
 name;lang-en-us: Billy Ray
 name;lang-en-us: Billy Bob
 cn;lang-en-us: Billy Ray
